qingfeng/docs/Chapter6/6-2nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
spec:
  selector:
    run: my-nginx
  ports:
  - port: 80
    targetPort: 80
